# datasette

./: .coveragerc  .deepsource.toml  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  Justfile  MANIFEST.in  Makefile  Pipfile  README.md  REVIEW-row-panel.md  RUN_Gen_Req.bat  app.py  existing-api.md  investigation-metadata-system.md  package-lock.json  package.json  permissions-notes.md  pyproject.toml  pytest.ini  queries-plan.md  requirements.txt  rollup.config.mjs  ruff.toml  setup.cfg  setup.py  sql-permissions-design-review.md  stable-api-recommendations.md  test-in-pyodide-with-shot-scraper.sh  test.md  test_helpers.py  update-docs-help.py  update-docs-help.sh  (+1 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: deploy-branch-preview.yml  deploy-latest.yml  documentation-links.yml  mirror-master-and-main.yml  playwright.yml  prettier.yml  publish.yml  push_docker_tag.yml  ruff.yml  spellcheck.yml  stable-docs.yml  test-coverage.yml  test-pyodide.yml  test-sqlite-support.yml  test-support.yml  test.yml  tmate-mac.yml  tmate.yml
.store/: UpworkAtomExample.rng.!  UpworkAtomExample.xmlns  UpworkAtomExample.xsd.1  default_output_01.db
.store/.0_import/: upwork_jobs.csv
datasette/: __init__.py  __main__.py  _pytest_plugin.py  _version.py  actor_auth_cookie.py  app.py  blob_renderer.py  cli.py  column_types.py  connectors.py  context.py  csrf.py  database.py  default_actions.py  default_column_types.py  default_database_actions.py  default_debug_menu.py  default_jump_items.py  default_magic_parameters.py  default_menu_links.py  default_permissions.py  default_query_actions.py  default_table_actions.py  events.py  extras.py  facets.py  filters.py  fixtures.py  forbidden.py  handle_exception.py  hookspecs.py  inspect.py  jump.py  metadata.py  my_inspect.py  permissions.py  plugin_demo.py  plugins.py  postgresql_database.py  query_page.py  (+14 more)
datasette/default_permissions/: __init__.py  config.py  defaults.py  helpers.py  restrictions.py  root.py  tokens.py
datasette/publish/: __init__.py  cloudrun.py  common.py  heroku.py  now.py
datasette/static/: app.css  autocomplete.js  cm-editor-6.0.1.bundle.js  cm-editor-6.0.1.js  cm-editor.bundle.js  cm-editor.js  cm-resize-1.0.1.min.js  codemirror-5.57.0-sql.min.js  codemirror-5.57.0.min.css  codemirror-5.57.0.min.js  column-chooser.js  datasette-manager.js  datasette-modal.js  datasette-sql-editor.bundle.js  datasette-sql-editor.js  edit-tools.js  json-format-highlight-1.0.1.js  mobile-column-actions.js  navigation-search.js  sort_utils.js  sql-formatter-2.3.3.min.js  sql-formatter.min.js  table-example-plugins.js  table.js
datasette/templates/: 500.html  __sorting_example.html  _action_menu.html  _close_open_menus.html  _codemirror.html  _codemirror_foot.html  _crumbs.html  _debug_common_functions.html  _description_source_license.html  _facet_results.html  base.html  (+42 more)
datasite/: app.py  cli.py
demos/: sql-editor-element.html
docs/: Makefile  authentication.rst  auto-build.sh  binary_data.rst  changelog.rst  cli-reference.rst  codespell-ignore-words.txt  conf.py  config.rst  configuration.rst  contributing.rst  csv_export.rst  custom_templates.rst  datasette-package-help.txt  datasette-publish-cloudrun-help.txt  datasette-publish-help.txt  datasette-publish-heroku-help.txt  datasette-publish-now-help.txt  datasette-publish-nowv1-help.txt  datasette-serve-help.txt  datasette.rst  deploying.rst  ecosystem.rst  events.md  events.rst  facets.rst  full_text_search.rst  generate-datasette-modal-example.sh  getting_started.rst  glossary.rst  index.rst  installation.rst  internals.rst  introspection.rst  javascript_plugins.rst  json_api.rst  json_api_doc.py  jsoncontext.py  limits.rst  metadata.rst  (+19 more)
example_permission_plugins/: example_permissions_plugin.py
immutabase/: app.py  cli.py
templates/: base.html  database.html  index.html  table.html
tests/: build_small_spatialite_db.py  conftest.py  ext.c  fixtures.py  spatialite.db  test-datasette-load-plugins.sh  test_actions_sql.py  test_actor_restriction_bug.py  test_allowed_many.py  test_allowed_resources.py  test_api.py  test_api_script.py  test_api_write.py  test_app.py  test_asyncdi.py  test_auth.py  test_autocomplete.py  test_base_view.py  test_black.py  test_canned_queries.py  test_canned_write.py  test_cli.py  test_cli_serve_get.py  test_cli_serve_server.py  test_column_types.py  test_config_dir.py  test_config_permission_rules.py  test_crossdb.py  test_csrf_middleware.py  test_csv.py  test_custom_pages.py  test_database.py  test_database_watcher.py  test_datasette_https_server.sh  test_datasette_manager_js.py  test_debug_autocomplete.py  test_default_deny.py  test_docs.py  test_docs_plugins.py  test_error_shape.py  (+65 more)
(+106 files in other folders)
