[metadata]
name = datasette
version = attr: datasette.version.__version__
description = An open source multi-tool for exploring and publishing data
long_description_content_type = text/markdown
long_description = file:README.md
author = Simon Willison
license = Apache License, Version 2.0
url = https://datasette.io/
classifiers =
    Development Status :: 4 - Beta
    Framework :: Datasette
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    Topic :: Database
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7

project_urls =
    Documentation = https=//docs.datasette.io/en/stable/,
    Changelog = https=//docs.datasette.io/en/stable/changelog.html,
    Live demo = https=//latest.datasette.io/,
    Source code = https=//github.com/simonw/datasette,
    Issues = https=//github.com/simonw/datasette/issues,
    CI = https=//github.com/simonw/datasette/actions?

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    asgiref>=3.2.10,<3.6.0
    click>=7.1.1,<8.2.0
    click-default-group-wheel>=1.2.2
    Jinja2>=2.10.3,<3.1.0
    hupper~=1.9
    httpx>=0.20
    pint~=0.9
    pluggy>=1.0,<1.1
    uvicorn~=0.11
    aiofiles>=0.4,<0.9
    janus>=0.6.2,<1.1
    asgi-csrf>=0.9
    PyYAML>=5.3,<7.0
    mergedeep>=1.1.1,<1.4.0
    itsdangerous>=1.1,<3.0
setup_requires = pytest-runner
tests_require = datasette[test]

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    datasette = datasette.cli:cli

[options.extras_require]
docs =
    furo==2022.6.21
    sphinx-autobuild
    codespell
    blacken-docs
    sphinx-copybutton
test =
    pytest>=5.2.2,<7.2.0
    pytest-xdist>=2.2.1,<2.6
    pytest-asyncio>=0.17,<0.20
    beautifulsoup4>=4.8.1,<4.12.0
    black==22.6.0
    blacken-docs==1.12.1
    pytest-timeout>=1.4.2,<2.2
    trustme>=0.7,<0.10
    cogapp>=3.3.0
rich = rich

[options.package_data]
datasette =
    templates/*.html

[aliases]
test = pytest

[flake8]
max-line-length = 160

[isort]
multi_line_output = 3
